tests/NormalTests/paczka1/small_fuzzy/84828076.err
Error in line 6: oX3s12 S345 -1,4
Error in line 5: oX3s12 S345 61,5
Error in line 13: 7CDfARKWgi S906 65,92
Error in line 8: oX3s12 S906 6,9
